<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/taiju_kekka"
        android:layout_width="232dp"
        android:layout_height="72dp"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:textSize="34sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tekiseitaiju" />

    <TextView
        android:id="@+id/tekiseitaiju"
        android:layout_width="204dp"
        android:layout_height="33dp"
        android:layout_marginTop="16dp"
        android:text="@string/tekiseitaiju"
        android:textSize="20sp"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/himando_kekka" />

    <TextView
        android:id="@+id/nenrei"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:text="@string/tv_nerei"
        app:layout_constraintBaseline_toBaselineOf="@+id/editNenrei"
        app:layout_constraintEnd_toStartOf="@+id/editNenrei" />

    <TextView
        android:id="@+id/sintyou"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:text="@string/tv_sintyou"
        app:layout_constraintBaseline_toBaselineOf="@+id/editSintyo"
        app:layout_constraintEnd_toStartOf="@+id/editSintyo" />

    <TextView
        android:id="@+id/teiju"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:text="@string/taiju"
        app:layout_constraintBaseline_toBaselineOf="@+id/editTaiju"
        app:layout_constraintEnd_toStartOf="@+id/editTaiju" />

    <TextView
        android:id="@+id/himando"
        android:layout_width="204dp"
        android:layout_height="33dp"
        android:layout_marginTop="100dp"
        android:text="@string/himando"
        android:textSize="20sp"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/himando_kekka"
        android:layout_width="232dp"
        android:layout_height="72dp"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/himando" />

    <TextView
        android:id="@+id/cm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/tv_cm"
        app:layout_constraintBaseline_toBaselineOf="@+id/editSintyo"
        app:layout_constraintStart_toEndOf="@+id/editSintyo" />

    <TextView
        android:id="@+id/sai"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/tv_sai"
        app:layout_constraintBaseline_toBaselineOf="@+id/editNenrei"
        app:layout_constraintStart_toEndOf="@+id/editNenrei" />

    <TextView
        android:id="@+id/kg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/kg"
        app:layout_constraintBaseline_toBaselineOf="@+id/editTaiju"
        app:layout_constraintStart_toEndOf="@+id/editTaiju" />

    <Button
        android:id="@+id/keisan"
        android:layout_width="340dp"
        android:layout_height="52dp"
        android:layout_marginTop="8dp"
        android:text="@string/bt_kei"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTaiju" />

    <Button
        android:id="@+id/Clear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/bt_clear"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/keisan"
        app:layout_constraintVertical_bias="0.53" />

    <EditText
        android:id="@+id/editNenrei"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="68dp"
        android:ems="10"
        android:inputType="number"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/taiju_kekka"
        tools:ignore="SpeakableTextPresentCheck" />

    <EditText
        android:id="@+id/editSintyo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:inputType="numberDecimal"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editNenrei"
        tools:ignore="SpeakableTextPresentCheck" />

    <EditText
        android:id="@+id/editTaiju"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:inputType="numberDecimal"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editSintyo"
        tools:ignore="SpeakableTextPresentCheck" />

    <TextView
        android:id="@+id/kg2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/kg"
        app:layout_constraintBaseline_toBaselineOf="@+id/taiju_kekka"
        app:layout_constraintStart_toEndOf="@+id/taiju_kekka" />

</androidx.constraintlayout.widget.ConstraintLayout>